--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-Flask==2.3.3
-opencv-python==4.8.0.76
-dlib==19.24.0
+Flask==2.0.1
+opencv-python-headless==4.6.0.66
+mediapipe==0.10.15
+Werkzeug==2.0.3
+matplotlib==3.4.3
+numpy==1.21.0
+gunicorn==20.1.0
